# IMHUNGRY-be

./: .env  .env.example  alembic.ini  app.py  main.py  pyproject.toml
core/: security.py
db/: session.py
migrations/: env.py
migrations/versions/: 0001_create_users_table.py  0002_create_chat_table.py  0003_create_recipe_local_table.py  0004_add_summary_to_chat.py  0005_add_user_id_to_recipe_local.py  0006_replace_recipe_local_with_library.py  0007_users_id_to_uuid.py
models/: chat.py  library.py  recipe_local.py  tutorial_stars.py  user.py
routers/: auth.py  chat.py  dashboard.py  items.py  library.py  recipe.py
schemas/: auth.py  chat.py  dashboard.py  library.py
scripts/: create_db.py
services/chat/: general_ai.py  recipe_tools.py  schemas.py  summary.py  tutorial_ai.py  youtube.py
